added name, contact information, and experience header

--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Johnny Saniat's Resume</title>
+  <article class="name">
+    <h1> Johnny Saniat </h1>
+    <hr>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
+  <section>
+    <article class="contact">
+      <h1> 215 S Downs Cir, Goodlettsville, TN 37072 • 630-247-3341 • Jcsaniat@gmail.com  </h1>
+    </article>
+    <article class="experience">
+      <h2> Experience  </h2>
+    </article>
+    <hr>
+  </section>
   
   <script src="main.js"></script>
 </body>
