added font families

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <section>
     <article class="contact">
-      <h1> 215 S Downs Cir, Goodlettsville, TN 37072 • 630-247-3341 • Jcsaniat@gmail.com  </h1>
+      <h1> 215 S Downs Cir, Goodlettsville, TN 37072 • 630-247-3341 • jcsaniat@gmail.com  </h1>
     </article>
     <article class="experience">
       <h2> Experience  </h2>
