not forgetting to commit before taking a break

--- a/index.html
+++ b/index.html
@@ -7,36 +7,37 @@
   <title>Johnny Saniat's Resume</title>
   <article class="name">
     <h1> Johnny Saniat </h1>
-    <hr>
+  <hr>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <section>
     <section class="contact">
-      <h1> 215 S Downs Cir, Goodlettsville, TN 37072 • 630-247-3341 • jcsaniat@gmail.com  </h1>
+        <h1>                                                                          215 S Downs Cir, Goodlettsville, TN 37072 • 630-247-3341 • jcsaniat@gmail.com  
+        </h1>
     </section>
     <section>
-    </article>
-    <article class="experience">
-      <h2> Experience  </h2>
-    </article>
-  </section>
-    <hr>
+      </article>
+      <article class="experience">
+        <h2> Experience  </h2>
+      </article>
+    </section>
+  <hr>
     <section>
-    <article class="adtalem">
-      <h1> Adtalem Global Education | Manager, Student Finance   </h1>
-    </article>
+      <article class="adtalem">
+        <h1> Adtalem Global Education | Manager, Student Finance   </h1>
+      </article>
       <article class="adtalem-timeframe">
-      <h1> July 2019 - Present </h1>
+        <h1> July 2019 - Present </h1>
     </section>
     <section>
-    <article class="chamberlain">
-      <h1> Chamberlain University | Service Quality Evaluator   </h1>
-    </article>
+      <article class="chamberlain">
+        <h1> Chamberlain University | Service Quality Evaluator   </h1>
+      </article>
       <article class="chamberlain-timeframe">
-      <h1> July 2016 - July 2019 </h1>
-    </article>
-  </section>
+        <h1> July 2016 - July 2019 </h1>
+      </article>
+    </section>
   
   <script src="main.js"></script>
 </body>
