--- a/index.html
+++ b/index.html
@@ -24,13 +24,16 @@
     </section>
   <hr>
     <section>
+    <header>
       <article class="adtalem">
         <h1> Adtalem Global Education | Manager, Student Finance   </h1>
       </article>
       <article class="adtalem-timeframe">
         <h1> July 2019 - Present </h1>
     </section>
+  </header>
     <section>
+  <header>
       <article class="chamberlain">
         <h1> Chamberlain University | Service Quality Evaluator   </h1>
       </article>
@@ -38,6 +41,7 @@
         <h1> July 2016 - July 2019 </h1>
       </article>
     </section>
+</header>
   
   <script src="main.js"></script>
 </body>
