finalized content and began to format

--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@
         <h1> Adtalem Global Education | Manager, Student Finance   </h1>
       </article>
       <article class="adtalem-timeframe">
-        <h1> July 2019 - Present </h1>
+        <h1> July 2019 - Present (Virtual Remote) </h1>
+          <ul>
+            <li>Led a team of 15 student support advisors to provde exceptional student experiences </li>
+            <li>Managed day to day operations to ensure positive stakeholder relations and elevate effciency </li>
+            <li>Networked with academic and finance directors to reduce student escalations and create persistence campaigns </li>
+            <li>Specialized in Title IX support, studetn accomodations, and acollaborated with the office of equity and access </li>
+        </ul>
+      </article>
     </section>
   </header>
     <section>
@@ -38,9 +45,28 @@
         <h1> Chamberlain University | Service Quality Evaluator   </h1>
       </article>
       <article class="chamberlain-timeframe">
-        <h1> July 2016 - July 2019 </h1>
+        <h1> July 2017 - July 2019 (Virtual Remote) </h1>
+          <ul>
+            <li>Developed and executed technological and strategical enhancements to streamline processes </li>
+            <li>Analyzed data and develped proposals to improve the student experience </li>
+            <li>Collaborated with leadership to align feedback delivery with colleague and organizational goals </li>
+          </ul>
       </article>
     </section>
+</header>
+<header>
+  <article class="chamberlain-SSA">
+    <h1> Chamberlain University | Student Support Advisor   </h1>
+  </article>
+  <article class="chamberlain-SSA-timeframe">
+    <h1> July 2016 - July 2017 (Naperville, IL) </h1>
+      <ul>
+        <li>Academically advised studetns on course scheduling, graduation plans, and faculty interaction </li>
+        <li>Advised students financially regarding student loans, personal finances, and aided in the creation of payment plans </li>
+        <li>Assisted students throughout their nursingprogram and helped otehrs change lives </li>
+      </ul>
+  </article>
+</section>
 </header>
   
   <script src="main.js"></script>
