checked off the project requirements and experimented with border images

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <h2> Experience  </h2>
       </article>
     </section>
-  <hr>
     <section>
-    <header>
       <article class="adtalem">
         <h1> Adtalem Global Education | Manager, Student Finance   </h1>
       </article>
+    </section>
+    <section>
       <article class="adtalem-timeframe">
         <h1> July 2019 - Present (Virtual Remote) </h1>
           <ul>
@@ -38,12 +38,12 @@
         </ul>
       </article>
     </section>
-  </header>
     <section>
-  <header>
       <article class="chamberlain">
         <h1> Chamberlain University | Service Quality Evaluator   </h1>
       </article>
+    </section>
+    <section>
       <article class="chamberlain-timeframe">
         <h1> July 2017 - July 2019 (Virtual Remote) </h1>
           <ul>
@@ -53,8 +53,7 @@
           </ul>
       </article>
     </section>
-</header>
-<header>
+  <section>
   <article class="chamberlain-SSA">
     <h1> Chamberlain University | Student Support Advisor   </h1>
   </article>
@@ -67,7 +66,6 @@
       </ul>
   </article>
 </section>
-</header>
   
   <script src="main.js"></script>
 </body>
