added a Hire Me button that creates a pop-up box

--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
   <title>Johnny Saniat's Resume</title>
   <article class="name">
     <h1> Johnny Saniat </h1>
+    <div class="btn-hired">
+      <button id="hirebtn">Hire Me!</button>
+    </div> 
+    <p id="hirebtn-text" class="hidden">TAKE ME TO YOUR LEADER!</p>
   <hr>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <section>
     <section class="contact">
-        <h1>                                                                          215 S Downs Cir, Goodlettsville, TN 37072 • 630-247-3341 • jcsaniat@gmail.com  
-        </h1>
+        <h1> 215 S Downs Cir, Goodlettsville, TN 37072 • 630-247-3341 • jcsaniat@gmail.com  </h1>
     </section>
     <section>
       </article>
